# aasn

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
experiments/context_propagation/: README.md  download_benchmarks_cli.py  findings.md  generate_configs.py  requirements.txt  run_all_experiments.ps1  run_experiment.py  run_phase_transition.ps1
experiments/context_propagation/benchmarks/coding/: humaneval.json  mbpp.json  tasks.json
experiments/context_propagation/benchmarks/general/: arc_challenge.json  gsm8k.json  mmlu.json  tasks.json
experiments/context_propagation/benchmarks/prompt_design/: tasks.json
experiments/context_propagation/configs/: baseline.yaml  context_anchoring.yaml  phase_transition_rich.yaml  phase_transition_score_only.yaml  rich_feedback.yaml  rich_feedback_qwen7b.yaml  score_only_qwen7b.yaml
experiments/context_propagation/harness/: __init__.py  agents.py  benchmarks.py  chain.py  config.py  download_benchmarks.py  llm.py  metrics.py  rich_feedback.py
experiments/context_propagation/notebooks/: phase_transition_colab.ipynb
src/aasn/: __init__.py
tests/: conftest.py  test_smoke.py
