[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aasn-sdk"
version = "0.0.1"
description = "Autonomous Agent Synthesis Network: automated multi-agent generation, discovery, and coordination"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Muntaser Syed"},
]
keywords = ["agents", "multi-agent", "mcp", "a2a", "adk", "llm", "autonomous"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "protobuf>=5.0",
    "numpy>=1.26",
    "typing-extensions>=4.9",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
a2a = [
    "aiohttp>=3.9",
]
adk = [
    "google-adk>=0.1",
]
observability = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "prometheus-client>=0.20",
]
all = [
    "aasn-sdk[mcp,a2a,adk,observability]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
experiments = [
    "sentence-transformers>=3.0",
    "matplotlib>=3.8",
    "pandas>=2.2",
    "scipy>=1.13",
    "jupyter>=1.0",
    "openai>=1.30",
    "anthropic>=0.25",
    "google-generativeai>=0.5",
    "tiktoken>=0.7",
]

[project.urls]
Homepage = "https://github.com/jemsbhai/aasn"
Repository = "https://github.com/jemsbhai/aasn"
Documentation = "https://jemsbhai.github.io/aasn"
Issues = "https://github.com/jemsbhai/aasn/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "experiment: marks experiment-related tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["aasn"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
